# Pycman

./: .gitignore  AUTHORS  ChangeLog  Pycman.xmind  README.md  README.rst  context.py  package.py  requirements.txt  setup.cfg  setup.py  test.py
pycman/: __init__.py  __main__.py  build.py  cli.py  initializer.py
pycman/builder/: BaseBuilder.py  GeneralBuilder.py  SimpleBuilder.py  __init__.py  utils.py
pycman/core/: __init__.py  initializer.py
pycman/core/builders/: git_builder.py  package_module_builder.py  prb_builder.py  readme_builder.py  requirements_builder.py  tests_builder.py
pycman/utils/: __init__.py  cli.py  common.py  logo.py  vermark.py  version.py
src/pycman/: cli.py  initial.py  pycman.py
tests/: .gitignore  package.py  setup.cfg  test.py  test_initializer.py  test_utils.py
