[metadata]
name = pycman
author = Singein Zhang
author-email = singein@outlook.com
summary = Python package manager
license = MIT
description-file = 
    README.rst
home-page = https://github.com/Singein/Pycman
requires-python = >= 3.4
classifier =
    Development Status:: 4 - Beta
    Environment:: Console
    Environment:: OpenStack
    Intended Audience:: Developers
    Intended Audience:: Information Technology
    License: : OSI Approved : : Apache Software License
    Operating System:: OS Independent
    Programming Language:: Python

[files]
packages = 
    pycman


[entry_points]
console_scripts =
    pycman=pycman.cli:main