[metadata]
name = pycman
author = Singein Zhang
author-email = singein@outlook.com
summary = Python package manager
license = MIT
description-file = 
    README.rst
home-page = https://github.com/Singein/Pycman
requires-python = >= 3.4


[files]
packages = 
    pycman


[entry_points]
console_scripts =
    pycman=pycman.cli:main